# challenge-fiap-fase-2

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yml
data/: README.md  cenario_critico.json  cenario_inviavel.json  cenario_medio.json  cenario_pequeno.json
data/schema/: cenario.schema.json
docs/: algoritmo-genetico.md  api.md  arquitetura.md  baselines-e-experimentos.md  checklist-entrega.md  definicao-do-problema.md  demonstracao-final.md  evolucao-codigo-base.md  fitness-e-restricoes.md  indice.md  integracao-llm.md  interface-da-solucao.md  nuvem.md  relatorio-tecnico.md  roteiro-video.md  testes-e-qualidade.md  visualizacoes.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
reports/experiments/: resultados-iniciais.json  resultados-iniciais.md
reports/llm/: medio.json  pequeno.json
reports/visualizations/: medio.indicadores.html  medio.mapa.html  medio.rotas.geojson  pequeno.indicadores.html  pequeno.mapa.html  pequeno.rotas.geojson
scripts/: avaliar_conteudo_llm.py  executar_experimentos.py  gerar_cenarios.py  gerar_conteudo_llm.py  gerar_visualizacoes.py
src/rotas_medicas/: __init__.py
tests/: conftest.py  test_dados_demonstracao.py  test_documentation.py  test_package.py
tests/api/: test_api.py  test_runner.py
tests/application/: test_service.py
tests/domain/: test_models.py
tests/genetic/: test_chromosome.py  test_engine.py  test_operators.py
tests/llm/: test_llm.py
tests/optimization/: conftest.py  (+7 more)
(+36 files in other folders)
